[package]
name = "unnamed"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
core-foundation-sys = { version = "0.8.7", default-features = false }
accessibility-sys = { version = "0.2.0", default-features = false }
cocoa = { git = "https://github.com/ethanuppal/core-foundation-rs", rev = "8a5832d955da568962ad817cefbff52fb21cdc11" }
core-graphics = { git = "https://github.com/ethanuppal/core-foundation-rs", rev = "8a5832d955da568962ad817cefbff52fb21cdc11" }
snafu = { version = "0.8.5", default-features = false, features = ["std"] }
dashmap = { version = "6.1.0", default-features = false }
rdev = { version = "0.5.3", default-features = false }
argh = { version = "0.1.13", default-features = false }

[patch.crates-io]
core-foundation-sys = { git = "https://github.com/ethanuppal/core-foundation-rs", rev = "8a5832d955da568962ad817cefbff52fb21cdc11" }

[lints.clippy]
undocumented_unsafe_blocks = "forbid"

[profile.dev]
debug = true
